Сделана базовая разметка страницы, порезан макет

--- a/index.html
+++ b/index.html
@@ -6,7 +6,124 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header_logo">
+          <img src="img/...svg" width="200" height="200" alt="Логотип Нёрдс">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="studio.html">студия</a></li>
+          <li><a href="customers.html">клиенты</a></li>
+          <li><a href="shop.html">магазин</a></li>
+          <li><a href="contacts.html">контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li><a href="cart.html">корзина</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main class="content">
+      <h1 class="visually-hidden">Дизйн-студия "Нёрдс"</h1>
+
+      <section class="slider slider1">
+        <p class="slider_tagline">Долго, дорого, скурпулезно.</p>
+        <p class="slider_text">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+        <a class="slider_button" href="moreinfo.html">узнать больше</a>
+      </section>
+
+      <section class="products">
+        <h2 class="visually-hidden">Продукты студии</h2>
+        <ul class="products-list">
+          <li class="products-list_item">
+            <h3 class="products-list_headline">веб-сайты</h3>
+            <p class="products-list_text">Мир никогда не будет прежним после того как увидит ваш сайт</p>
+            <a class="btn btn-red products-list_btn" href="order-site.html">заказать</a>
+          </li>
+          <li class="products-list_item">
+            <h3 class="products-list_headline">приложения</h3>
+            <p class="products-list_text">Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a class="btn btn-green products-list_btn" href="order-app.html">заказать</a>
+          </li>
+          <li class="products-list_item">
+            <h3 class="products-list_item_headline">презентации</h3>
+            <p class="products-list_item_text">Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a class="btn btn-yellow products-list_btn button" href="order-presentation.html">заказать</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="studio-inform">
+        <h2 class="visually-hidden">О студии</h2>
+        <p class="studio-inform_headline">Мы - маленькая, но гордая дизайн-студия из Краснодара</p>
+        <div class="studio-inform_article">
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук. Как роботы.</p>
+          <h3>выполняем заказы на разработку:</h3>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS Android</li>
+            <li>Слайд-шоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <p class="studio-inform_statistics_headline">с 2004 года любим точность во всем</p>
+        <ul class="studio-inform_statistics">
+           <li class="studio-inform_statistics_index">Уровень самоотдачи</li>
+           <li class="studio-inform_statistics_index">Соблюдение сроков</li>
+           <li class="studio-inform_statistics_index">Минимальная предоплата</li>
+        </ul>
+      </section>
+
+      <section class="partners">
+        <h2 class="visually-hidden">Наши партнёры</h2>
+        <ul class="partners-list">
+          <li class="partners-list_item">
+            <a href="htmlacademy.ru" class="partners-list_link">
+              <img class="partners-list_img" src="">
+            </a>
+          </li>
+          <li class="partners-list_item">
+            <a href="borodinski.html" class="partners-list_link">
+              <img class="partners-list_img" src="">
+            </a>
+         </li>
+          <li class="partners-list_item">
+            <a href="pink.html" class="partners-list_link">
+              <img class="partners-list_img" src="">
+            </a>
+          </li>
+          <li class="partners-list_item">
+            <a href="mishka.html" class="partners-list_link">
+              <img class="partners-list_img" src="">
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="contacts">
+        <h2>Контактная информация</h2>
+        <section class="contacts_detail">
+          <p>NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a class="contacts_detail_button button" href="write-us.html">напишите нам</a>
+        </section>
+      </section>
+      <div class="modal_feedback">
+
+      </div>
+    </main>
+
+    <footer class="main-footer">
+      <ul>
+        <li><a class="main-footer_social-button" href="vk.com">Вконтакте</a></li>
+        <li><a class="main-footer_social-button" href="facebook.com">Фейсбук</a></li>
+        <li><a class="main-footer_social-button" href="instagram.com">Инстаграм</a></li>
+      </ul>
+      <div class="main-footer_text">
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+      </div>
+
+    </footer>
   </body>
 </html>
