--- a/index.html
+++ b/index.html
@@ -3,127 +3,223 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header_logo">
-          <img src="img/...svg" width="200" height="200" alt="Логотип Нёрдс">
+        <div class="container main-navigation-container">
+        <a class="main-header_logo" href="#">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
         </a>
         <ul class="site-navigation">
-          <li><a href="studio.html">студия</a></li>
-          <li><a href="customers.html">клиенты</a></li>
-          <li><a href="shop.html">магазин</a></li>
-          <li><a href="contacts.html">контакты</a></li>
+          <li><a class="site-navigation_link" href="#">студия</a></li>
+          <li><a class="site-navigation_link" href="#">клиенты</a></li>
+          <li><a class="site-navigation_link" href="inner.html">магазин</a></li>
+          <li><a class="site-navigation_link" href="#">контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li><a href="cart.html">корзина</a></li>
+          <li><a class="user-navigation_link" href="#">корзина</a></li>
         </ul>
+      </div>
       </nav>
     </header>
 
     <main class="content">
-      <h1 class="visually-hidden">Дизйн-студия "Нёрдс"</h1>
+   <h1 class="visually-hidden">Дизйн-студия "Нёрдс"</h1>
+      <section class="slider">
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+        <div class="slider-controls">
+          <i class="active"></i>
+          <i></i>
+          <i></i>
+        </div>
+        <ul class="slider-list">
+          <li class="slider-item">
+            <h3>Долго, дорого,<br> скрупулезно.</h3>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="slider-item_btn btn" href="#">Узнать больше</a>
+          </li>
+          <li class="slider-item">
+            <h3>Любим математику как никто другой</h3>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a class="slider-item_btn btn" href="#">Узнать больше</a>
+          </li>
+          <li class="slider-item">
+            <h3>Только ночь,<br> только хардкор</h3>
+            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+            <a class="slider-item_btn btn" href="#">Узнать больше</a>
+          </li>
+        </ul>
+    </div>
+        </section>
 
-      <section class="slider slider1">
-        <p class="slider_tagline">Долго, дорого, скурпулезно.</p>
-        <p class="slider_text">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-        <a class="slider_button" href="moreinfo.html">узнать больше</a>
-      </section>
 
+  <div class="container">
       <section class="products">
         <h2 class="visually-hidden">Продукты студии</h2>
+
         <ul class="products-list">
-          <li class="products-list_item">
+          <li>
+            <img src="img/illustration-1.png" width="300" height="146">
             <h3 class="products-list_headline">веб-сайты</h3>
-            <p class="products-list_text">Мир никогда не будет прежним после того как увидит ваш сайт</p>
-            <a class="btn btn-red products-list_btn" href="order-site.html">заказать</a>
+            <p class="products-list_text">Мир никогда не будет прежним<br>после того как увидит ваш сайт</p>
+            <a class="btn btn-red products-list_btn" href="#">заказать</a>
           </li>
-          <li class="products-list_item">
+          <li>
+            <img src="img/illustration-2.png" width="300" height="146">
             <h3 class="products-list_headline">приложения</h3>
-            <p class="products-list_text">Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="btn btn-green products-list_btn" href="order-app.html">заказать</a>
+            <p class="products-list_text">Покорите топ-10 приложений в<br> AppStore и Google Play</p>
+            <a class="btn btn-green products-list_btn" href="#">заказать</a>
           </li>
-          <li class="products-list_item">
-            <h3 class="products-list_item_headline">презентации</h3>
-            <p class="products-list_item_text">Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="btn btn-yellow products-list_btn button" href="order-presentation.html">заказать</a>
+          <li>
+            <img src="img/illustration-3.png" width="300" height="146">
+            <h3 class="products-list_headline">презентации</h3>
+            <p class="products-list_text">Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+            <a class="btn btn-yellow products-list_btn" href="#">заказать</a>
           </li>
         </ul>
       </section>
+
+      <hr class="line">
 
       <section class="studio-inform">
         <h2 class="visually-hidden">О студии</h2>
-        <p class="studio-inform_headline">Мы - маленькая, но гордая дизайн-студия из Краснодара</p>
         <div class="studio-inform_article">
+        <p class="studio-inform_headline">Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
           <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук. Как роботы.</p>
           <h3>выполняем заказы на разработку:</h3>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS Android</li>
-            <li>Слайд-шоу и видео для корпоративных презентаций</li>
+          <ul class="studio-inform_list">
+            <li><hr class="list">Веб-сайтов любой сложности</li>
+            <li><hr class="list">Мобильных приложений для iOS Android</li>
+            <li><hr class="list">Слайд-шоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
-        <p class="studio-inform_statistics_headline">с 2004 года любим точность во всем</p>
-        <ul class="studio-inform_statistics">
-           <li class="studio-inform_statistics_index">Уровень самоотдачи</li>
-           <li class="studio-inform_statistics_index">Соблюдение сроков</li>
-           <li class="studio-inform_statistics_index">Минимальная предоплата</li>
+        <div class="studio-inform_statistics">
+          <div class="studio-inform_container">
+           <h3>с 2004 года любим точность во всем:</h3>
+        <ul class="statistics-info">
+           <li><span class="statistics-info_value">146</span><span class="statistics-info_perc">%</span><br>Уровень самоотдачи</li>
+           <li><span class="statistics-info_value">100</span><span class="statistics-info_perc">%</span><br>Соблюдение сроков</li>
+           <li><span class="statistics-info_value">50</span><span class="statistics-info_perc">%</span><br>Минимальная предоплата</li>
         </ul>
+      </div>
+      </div>
       </section>
+
+      <hr class="line">
 
       <section class="partners">
         <h2 class="visually-hidden">Наши партнёры</h2>
         <ul class="partners-list">
-          <li class="partners-list_item">
-            <a href="htmlacademy.ru" class="partners-list_link">
-              <img class="partners-list_img" src="">
+          <li>
+            <a href="https://htmlacademy.ru/intensive/htmlcss" class="partners-list_link">
+              <img class="partners-list_img" src="img/logo-1.png" width="199" height="68" alt="Логотип HTML-academy">
             </a>
           </li>
           <li class="partners-list_item">
-            <a href="borodinski.html" class="partners-list_link">
-              <img class="partners-list_img" src="">
+            <a href="#" class="partners-list_link">
+              <img class="partners-list_img" src="img/logo-2.png" width="209" height="90" alt="Логотип барбершопа Бородинский">
             </a>
          </li>
           <li class="partners-list_item">
-            <a href="pink.html" class="partners-list_link">
-              <img class="partners-list_img" src="">
+            <a href="#" class="partners-list_link">
+              <img class="partners-list_img" src="img/logo-3.png" width="185" height="52" alt="Логотип PINK">
             </a>
           </li>
           <li class="partners-list_item">
             <a href="mishka.html" class="partners-list_link">
-              <img class="partners-list_img" src="">
+              <img class="partners-list_img" src="img/logo-4.png" width="173" height="84" alt="Логотип MISHKA">
             </a>
           </li>
         </ul>
       </section>
+      <hr class="line">
+    </div>
 
       <section class="contacts">
-        <h2>Контактная информация</h2>
-        <section class="contacts_detail">
-          <p>NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
+        <h2 class="visually-hidden">Контактная информация</h2>
+        <div class="contacts_detail">
+          <h3>NЁRDS DESIGN STUDIO</h3>
+          <p>191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
           <p>тел. +7 (812) 275-75-75</p>
-          <a class="contacts_detail_button button" href="write-us.html">напишите нам</a>
-        </section>
-      </section>
-      <div class="modal_feedback">
+          <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
+        </div>
+        <div class="contacts_map">
+          <img src="img/map.jpg">
+        </div>
 
-      </div>
+        <div class="modal-feedback">
+          <button class="modal-feedback_close" type="button">Закрыть</button>
+              <p>Напишите нам</p>
+
+              <form action="https://echo.htmlacademy.ru" method="post">
+                <div class="modal-flex">
+                  <div>
+                <label for="name-id">Ваше имя:</label><br>
+                  <input class="modal_name" type="text" name="name" id="name-id" placeholder="Имя Фамилия">
+                </div>
+                <div>
+                <label for="email-id"> Ваш e-mail:</label><br>
+                  <input class="modal_email" type="text" name="email" id="email-id" placeholder="email@example.com">
+                </div>
+                <div>
+                <label for="feedback-id">Текст письма:</label><br>
+                  <textarea class="modal_text" name="feedback" id="feedback-id" placeholder="В свободной форме"></textarea>
+                </div>
+              </div>
+                <input class="btn modal_btn" type="submit" value="Отправить">
+
+              </form>
+            </div>
+
+      </section>
+
     </main>
 
     <footer class="main-footer">
-      <ul>
-        <li><a class="main-footer_social-button" href="vk.com">Вконтакте</a></li>
-        <li><a class="main-footer_social-button" href="facebook.com">Фейсбук</a></li>
-        <li><a class="main-footer_social-button" href="instagram.com">Инстаграм</a></li>
+     <div class="container main-footer-container">
+      <ul class="main-footer_social">
+        <li><a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Вконтакте</span>
+          <svg
+	 width="26" height="15" viewBox="0 0 26 15">
+<path fill="#FFFFFF" d="M16.138,11.51c0.956-0.309,2.18,2.04,3.483,2.939c0.978,0.681,1.727,0.534,1.727,0.534l3.473-0.05
+	c0,0,1.815-0.112,0.957-1.554c-0.071-0.12-0.503-1.069-2.585-3.022c-2.177-2.043-1.882-1.712,0.739-5.244
+	c1.597-2.153,2.236-3.468,2.036-4.028c-0.192-0.539-1.365-0.399-1.365-0.399L20.69,0.713c-0.381,0.001-0.704,0.119-0.851,0.515
+	c-0.003,0.004-0.621,1.666-1.445,3.079c-1.741,2.989-2.436,3.148-2.724,2.961c-0.661-0.433-0.494-1.737-0.494-2.664
+	c0-2.897,0.432-4.105-0.846-4.417c-0.427-0.104-0.739-0.172-1.828-0.182c-1.392-0.021-2.574,0-3.244,0.329
+	c-0.445,0.223-0.786,0.712-0.579,0.74c0.26,0.035,0.843,0.16,1.155,0.586c0.401,0.552,0.389,1.789,0.389,1.789
+	s0.229,3.411-0.54,3.834c-0.528,0.29-1.25-0.302-2.803-3.016C6.087,2.879,5.488,1.345,5.488,1.345S5.372,1.06,5.162,0.904
+	C4.912,0.719,4.562,0.66,4.562,0.66L0.848,0.684c0,0-0.558,0.016-0.763,0.262C-0.097,1.164,0.07,1.614,0.07,1.614
+	s2.909,6.881,6.203,10.347c3.02,3.182,6.452,2.971,6.452,2.971h1.555c0,0,0.469-0.054,0.709-0.312
+	c0.224-0.24,0.214-0.691,0.214-0.691S15.172,11.82,16.138,11.51z"/>
+</svg>
+        </a></li>
+        <li><a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Фейсбук</span>
+          <svg
+	 width="12" height="22" viewBox="0 0 12 22">
+<path fill="#FFFFFF" d="M12,4V0H8C5.791,0,4,1.791,4,4v4H0v4h4v10h4V12h4V8H8V4H12z"/>
+</svg>
+        </a></li>
+        <li><a class="main-footer_social-button" href="#"><span class="visually-hidden">ссылка на Инстаграм</span>
+          <svg
+	 width="21" height="21" viewBox="0 0 21 21" >
+<path fill="#FFFFFF" d="M18,0H3C1.35,0,0,1.35,0,3v15c0,1.65,1.35,3,3,3h15c1.65,0,3-1.35,3-3V3C21,1.35,19.65,0,18,0z M10.5,7
+	c1.93,0,3.5,1.57,3.5,3.5S12.43,14,10.5,14S7,12.43,7,10.5S8.57,7,10.5,7z M18,18H3V9h1.181C4.067,9.482,4,9.983,4,10.5
+	c0,3.59,2.91,6.5,6.5,6.5s6.5-2.91,6.5-6.5c0-0.517-0.066-1.018-0.181-1.5H18V18z M18,7h-4V3h4V7z"/>
+</svg>
+        </a></li>
       </ul>
       <div class="main-footer_text">
-        <p>Давайте дружить, это выгодно!</p>
+        <p class="main-footer_tagline">Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
-
+    </div>
     </footer>
+
   </body>
 </html>
