--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 
         <ul class="products-list">
           <li>
-            <img src="img/illustration-1.png" width="300" height="146">
+            <img src="img/illustration-1.png" width="300" height="146" alt="1">
             <h3 class="products-list_headline">веб-сайты</h3>
             <p class="products-list_text">Мир никогда не будет прежним<br>после того как увидит ваш сайт</p>
             <a class="btn btn-red products-list_btn" href="#">заказать</a>
           </li>
           <li>
-            <img src="img/illustration-2.png" width="300" height="146">
+            <img src="img/illustration-2.png" width="300" height="146" alt="1">
             <h3 class="products-list_headline">приложения</h3>
             <p class="products-list_text">Покорите топ-10 приложений в<br> AppStore и Google Play</p>
             <a class="btn btn-green products-list_btn" href="#">заказать</a>
           </li>
           <li>
-            <img src="img/illustration-3.png" width="300" height="146">
+            <img src="img/illustration-3.png" width="300" height="146" alt="1">
             <h3 class="products-list_headline">презентации</h3>
             <p class="products-list_text">Вы даже не подозреваете,<br> насколько вы изумительны!</p>
             <a class="btn btn-yellow products-list_btn" href="#">заказать</a>
@@ -150,7 +150,7 @@
           <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
         </div>
         <div class="contacts_map">
-          <img src="img/map.jpg">
+          <img src="img/map.jpg" width="1440" height="416" alt="карта">
         </div>
 
         <div class="modal-feedback">
