--- a/inner.html
+++ b/inner.html
@@ -59,7 +59,8 @@
            </li>
 
            <li>
-             <ul class="filters_grid"><legend>сетка:</legend>
+             <legend>сетка:</legend>
+             <ul class="filters_grid">
                <li>
                 <label>
                   <input class="radio" type="radio" name="grid" value="adaptive" checked>
@@ -85,8 +86,8 @@
            </li>
 
            <li>
+             <legend>особенности:</legend>
              <ul class="filters_features">
-               <legend>особенности:</legend>
                  <li>
                    <label>
                    <input class="checkbox" type="checkbox" name="features" value="slider" checked>
@@ -149,7 +150,7 @@
               <li>
                 <a class="templates-items_link" href="#">
                   <div class="templates-items_decoration">
-                  <svg xmlns=width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <svg width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 </div>
                   <img src="img/img-sedona.jpg" width="360" height="576" alt="макет Седона">
                 </a>
@@ -162,7 +163,7 @@
               <li>
                 <a class="templates-items_link" href="#">
                   <div class="templates-items_decoration">
-                  <svg xmlns=width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <svg width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 </div>
                   <img src="img/img-pink.jpg" width="360" height="576" alt="макет Пинк">
                 </a>
@@ -177,7 +178,7 @@
               <li>
                 <a class="templates-items_link" href="#">
                   <div class="templates-items_decoration">
-                  <svg xmlns=width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <svg width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 </div>
                   <img src="img/img-barbershop.jpg" width="360" height="576" alt="макет Барбершоп Бородинский">
                 </a>
@@ -192,7 +193,7 @@
               <li>
                 <a class="templates-items_link" href="#">
                   <div class="templates-items_decoration">
-                  <svg xmlns=width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <svg width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 </div>
                   <img src="img/img-mishka.jpg" width="360" height="576" alt="макет Мишка">
                 </a>
@@ -207,7 +208,7 @@
               <li>
                 <a class="templates-items_link" href="#">
                   <div class="templates-items_decoration">
-                  <svg xmlns=width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <svg width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 </div>
                   <img src="img/img-aplus.jpg" width="360" height="576" alt="макет А-плюс">
                 </a>
@@ -222,7 +223,7 @@
               <li>
                 <a class="templates-items_link" href="#">
                   <div class="templates-items_decoration">
-                  <svg xmlns=width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
+                  <svg width="360" height="40" viewBox="0 0 360 40"><path fill="#4D4D4D" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
                 </div>
                   <img src="img/img-kvast.jpg" width="360" height="576" alt="макет Кваст">
                 </a>
@@ -255,7 +256,7 @@
         <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
       </div>
       <div class="contacts_map">
-        <img src="img/map.jpg">
+        <img src="img/map.jpg" width="1440" height="416" alt="карта">
       </div>
 
       <div class="modal-feedback">
@@ -282,6 +283,7 @@
             </form>
           </div>
     </section>
+  </main>
 
       <footer class="main-footer">
        <div class="container main-footer-container">
