Исправлены ошибки валидации

--- a/inner.html
+++ b/inner.html
@@ -57,7 +57,7 @@
         </div>
       </fieldset>
            </li>
-        <legend>сетка:</legend>
+        <p>сетка:</p>
            <li>
              <ul class="filters_grid">
                <li>
@@ -83,7 +83,7 @@
             </li>
             </ul>
            </li>
-    <legend>особенности:</legend>
+    <p>особенности:</p>
            <li>
              <ul class="filters_features">
                  <li>
