--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -65,19 +65,19 @@
 
         <ul class="products-list">
           <li>
-            <img src="img/illustration-1.png" width="300" height="146" alt="1">
+            <img src="img/illustration-1.png" width="300" height="146" alt="слайд1">
             <h3 class="products-list_headline">веб-сайты</h3>
             <p class="products-list_text">Мир никогда не будет прежним<br>после того как увидит ваш сайт</p>
             <a class="btn btn-red products-list_btn" href="#">заказать</a>
           </li>
           <li>
-            <img src="img/illustration-2.png" width="300" height="146" alt="1">
+            <img src="img/illustration-2.png" width="300" height="146" alt="слайд2">
             <h3 class="products-list_headline">приложения</h3>
             <p class="products-list_text">Покорите топ-10 приложений в<br> AppStore и Google Play</p>
             <a class="btn btn-green products-list_btn" href="#">заказать</a>
           </li>
           <li>
-            <img src="img/illustration-3.png" width="300" height="146" alt="1">
+            <img src="img/illustration-3.png" width="300" height="146" alt="слайд3">
             <h3 class="products-list_headline">презентации</h3>
             <p class="products-list_text">Вы даже не подозреваете,<br> насколько вы изумительны!</p>
             <a class="btn btn-yellow products-list_btn" href="#">заказать</a>
@@ -85,13 +85,11 @@
         </ul>
       </section>
 
-      <hr class="line">
-
       <section class="studio-inform">
         <h2 class="visually-hidden">О студии</h2>
         <div class="studio-inform_article">
         <p class="studio-inform_headline">Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук. Как роботы.</p>
+          <p class="studio-inform_text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук. Как роботы.</p>
           <h3>выполняем заказы на разработку:</h3>
           <ul class="studio-inform_list">
             <li><hr class="list">Веб-сайтов любой сложности</li>
@@ -103,15 +101,15 @@
           <div class="studio-inform_container">
            <h3>с 2004 года любим точность во всем:</h3>
         <ul class="statistics-info">
-           <li><span class="statistics-info_value">146</span><span class="statistics-info_perc">%</span><br>Уровень самоотдачи</li>
-           <li><span class="statistics-info_value">100</span><span class="statistics-info_perc">%</span><br>Соблюдение сроков</li>
-           <li><span class="statistics-info_value">50</span><span class="statistics-info_perc">%</span><br>Минимальная предоплата</li>
+           <li><span class="statistics-info_value">146</span><span class="statistics-info_perc">%</span><br><p>Уровень самоотдачи</p></li>
+           <li><span class="statistics-info_value">100</span><span class="statistics-info_perc">%</span><br><p>Соблюдение сроков</p></li>
+           <li><span class="statistics-info_value">50</span><span class="statistics-info_perc">%</span><br><p>Минимальная предоплата</p></li>
         </ul>
       </div>
       </div>
       </section>
 
-      <hr class="line">
+
 
       <section class="partners">
         <h2 class="visually-hidden">Наши партнёры</h2>
@@ -138,7 +136,6 @@
           </li>
         </ul>
       </section>
-      <hr class="line">
     </div>
 
       <section class="contacts">
@@ -165,7 +162,7 @@
                 </div>
                 <div>
                 <label for="email-id"> Ваш e-mail:</label><br>
-                  <input class="modal_email" type="text" name="email" id="email-id" placeholder="email@example.com">
+                  <input class="modal_email" type="email" name="email" id="email-id" placeholder="email@example.com">
                 </div>
                 <div>
                 <label for="feedback-id">Текст письма:</label><br>
