--- a/inner.html
+++ b/inner.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -30,64 +30,65 @@
 
     <main class="content-inner">
       <div class="main-headline">
-      <h2>Магазин готовых шаблонов</h2>
-    </div>
+        <h2>Магазин готовых шаблонов</h2>
+      </div>
       <div class="container">
         <div class="filters-flex">
-      <section class="filters">
-        <h3 class="visually-hidden">Фильтры</h3>
-        <form action="https://echo.htmlacademy.ru" method="post">
-        <ul class="filters-form">
-
-           <li class="filter_cost">
-             <fieldset class="filter-item">
-        <legend>Стоимость:</legend>
-        <div class="range-filter">
-          <div class="range-controls">
-            <div class="scale">
-              <div class="bar"></div>
-            </div>
-            <div class="toggle toggle-min"></div>
-            <div class="toggle toggle-max"></div>
-          </div>
-          <div class="price-controls">
-            <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-            <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
-          </div>
-        </div>
-      </fieldset>
-           </li>
-
-           <li>
-             <ul class="filters_grid">
-               
-               <li>
-                <label>
-                  <input class="radio" type="radio" name="grid" value="adaptive" checked>
-                  <span class="radio-custom"></span>
-                  <span class="radio-label">Адаптивная</span>
-                </label>
+          <section class="filters">
+            <h3 class="visually-hidden">Фильтры</h3>
+            <form action="https://echo.htmlacademy.ru" method="post">
+            <ul class="filters-form">
+              <li class="filter_cost">
+                <fieldset class="filter-item">
+                <legend>Стоимость:</legend>
+                <div class="range-filter">
+                  <div class="range-controls">
+                    <div class="scale">
+                      <div class="bar"></div>
+                    </div>
+                    <div class="toggle toggle-min"></div>
+                    <div class="toggle toggle-max"></div>
+                  </div>
+                  <div class="price-controls">
+                    <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                    <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                  </div>
+                </div>
+                </fieldset>
               </li>
               <li>
-               <label>
-                 <input class="radio" type="radio" name="grid" value="fix">
-                 <span class="radio-custom"></span>
-                 <span class="radio-label">Фиксированная</span>
-               </label>
+                <fieldset class="filter-item">
+                  <legend>Сетка:</legend>
+                  <ul class="filters_grid">
+                  <li>
+                   <label class="grid_label">
+                     <input class="radio" type="radio" name="grid" value="adaptive" checked>
+                     <span class="radio-custom"></span>
+                     <span class="radio-label">Адаптивная</span>
+                   </label>
+                 </li>
+                 <li>
+                  <label class="grid_label">
+                    <input class="radio" type="radio" name="grid" value="fix">
+                    <span class="radio-custom"></span>
+                    <span class="radio-label">Фиксированная</span>
+                  </label>
+                </li>
+                <li>
+                 <label class="grid_label">
+                   <input class="radio" type="radio" name="grid" value="flex">
+                   <span class="radio-custom"></span>
+                   <span class="radio-label">Резиновая</span>
+                 </label>
+               </li>
+               </ul>
+             </fieldset>
              </li>
-             <li>
-              <label>
-                <input class="radio" type="radio" name="grid" value="flex">
-                <span class="radio-custom"></span>
-                <span class="radio-label">Резиновая</span>
-              </label>
-            </li>
-            </ul>
-           </li>
 
            <li>
-             <ul class="filters_features">
-
+             <fieldset class="filter-item">
+               <legend>Особенности:</legend>
+              <ul class="filters_features">
                  <li>
                    <label>
                    <input class="checkbox" type="checkbox" name="features" value="slider" checked>
@@ -124,6 +125,7 @@
                    </label>
                  </li>
              </ul>
+           </fieldset>
            </li>
            <li>
              <input class="filters-form_btn" type="submit" value="показать">
@@ -136,13 +138,13 @@
           <div class="sorting">
             <p>сортировать:</p>
             <ul class="templates-sorting">
-              <li><a href="#">по цене</a></li>
-              <li><a href="#">по типу</a></li>
-              <li><a href="#">по названию</a></li>
+              <li><a class="templates-sorting_current" href="#">по цене</a></li>
+              <li><a class="templates-sorting_link" href="#">по типу</a></li>
+              <li><a class="templates-sorting_link" href="#">по названию</a></li>
             </ul>
             <ul class="sorting-breadcrambs">
-              <li><a href="#"><svg width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 10L0 0h11"/></svg></a></li>
-              <li><a href="#"><svg width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 0L0 10h11z"/></svg></a></li>
+              <li><a class="sorting-breadcrambs_current" href="#"><svg width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 10L0 0h11"/></svg></a></li>
+              <li><a class="sorting-breadcrambs_link" href="#"><svg width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 0L0 10h11z"/></svg></a></li>
             </ul>
           </div>
           <div>
