--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         <h2 class="visually-hidden">Контактная информация</h2>
         <div class="contacts_detail">
           <h3>NЁRDS DESIGN STUDIO</h3>
-          <p>191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
+          <p class="contacts_text">191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
+          <p class="contacts_tel">тел. +7 (812) 275-75-75</p>
           <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
         </div>
         <div class="contacts_map">
