--- a/inner.html
+++ b/inner.html
@@ -90,35 +90,35 @@
                <legend>Особенности:</legend>
               <ul class="filters_features">
                  <li>
-                   <label>
+                   <label class="filters_label">
                    <input class="checkbox" type="checkbox" name="features" value="slider" checked>
                    <span class="checkbox-custom"></span>
                    <span class="checkbox-label">Слайдер</span>
                  </label>
                  </li>
                  <li>
-                   <label>
+                   <label class="filters_label">
                    <input class="checkbox" type="checkbox" name="features" value="features-block">
                    <span class="checkbox-custom"></span>
                    <span class="checkbox-label">Блок приемуществ</span>
                  </label>
                  </li>
                  <li>
-                   <label>
+                   <label class="filters_label">
                    <input class="checkbox" type="checkbox" name="features" value="news" checked>
                    <span class="checkbox-custom"></span>
                    <span class="checkbox-label">Новости</span>
                  </label>
                  </li>
                  <li>
-                   <label>
+                   <label class="filters_label">
                    <input class="checkbox" type="checkbox" name="features" value="gallery">
                    <span class="checkbox-custom"></span>
                    <span class="checkbox-label">Галерея</span>
                  </label>
                  </li>
                  <li>
-                   <label>
+                   <label class="filters_label">
                    <input class="checkbox" type="checkbox" name="features" value="cart">
                    <span class="checkbox-custom"></span>
                    <span class="checkbox-label">Корзина</span>
@@ -157,7 +157,7 @@
                   <img src="img/img-sedona.jpg" width="360" height="576" alt="макет Седона">
                 </a>
                  <div class="templates-items_hover">
-                    <h4>SEDONA</h4>
+                    <h4><a class="hover_link" href="#">SEDONA<a/></h4>
                     <p>Информационный сайт для туристов</p>
                     <a class="btn templates-items_btn" href="#">9900 руб.</a>
                  </div>
@@ -171,7 +171,7 @@
                 </a>
                 <div class="templates-items_hover">
                   <div class="templates-items_hover-content">
-                  <h4>PINK APP</h4>
+                  <h4><a class="hover_link" href="#">PINK APP</a></h4>
                   <p>Продуктивный лендинг приложений для iOS и Android</p>
                   <a class="btn templates-items_btn" href="#">9900 руб.</a>
                 </div>
@@ -186,7 +186,7 @@
                 </a>
                 <div class="templates-items_hover">
                   <div class="templates-items_hover-content">
-                  <h4>BARBERSHOP</h4>
+                  <h4><a class="hover_link" href="#">BARBERSHOP</a></h4>
                   <p>Сайт салона красоты. Для мужчин, да.</p>
                   <a class="btn templates-items_btn" href="#">9900 руб.</a>
                 </div>
@@ -201,7 +201,7 @@
                 </a>
                 <div class="templates-items_hover">
                   <div class="templates-items_hover-content">
-                  <h4>MISHKA</h4>
+                  <h4><a class="hover_link" href="#">MISHKA</a></h4>
                   <p>Интернет-магазин вязаных игрушек</p>
                   <a class="btn templates-items_btn" href="#">9900 руб.</a>
                 </div>
@@ -216,7 +216,7 @@
                 </a>
                 <div class="templates-items_hover">
                   <div class="templates-items_hover-content">
-                  <h4>A PLUS</h4>
+                  <h4><a class="hover_link" href="#">A PLUS</a></h4>
                   <p>Лендинг курсов повышения квалификации</p>
                   <a class="btn templates-items_btn" href="#">9900 руб.</a>
                 </div>
@@ -231,7 +231,7 @@
                 </a>
                 <div class="templates-items_hover">
                   <div class="templates-items_hover-content">
-                  <h4>КВАСТ</h4>
+                  <h4><a class="hover_link" href="#">КВАСТ</a></h4>
                   <p>Промо-сайт производителя кравтового кваса</p>
                   <a class="btn templates-items_btn" href="#">9900 руб.</a>
                 </div>
@@ -253,8 +253,8 @@
       <h2 class="visually-hidden">Контактная информация</h2>
       <div class="contacts_detail">
         <h3>NЁRDS DESIGN STUDIO</h3>
-        <p>191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
-        <p>тел. +7 (812) 275-75-75</p>
+        <p class="contacts_text">191186, Санкт-Петербург,<br> ул. Б.Конюшенная, д. 19/8</p>
+        <p class="contacts_tel">тел. +7 (812) 275-75-75</p>
         <a class="btn contacts-detail_btn" href="write-us.html">напишите нам</a>
       </div>
       <div class="contacts_map">
