--- a/inner.html
+++ b/inner.html
@@ -157,7 +157,7 @@
                   <img src="img/img-sedona.jpg" width="360" height="576" alt="макет Седона">
                 </a>
                 <div class="templates-items_hover">
-                  <h4><a class="hover_link" href="#">SEDONA<a/></h4>
+                  <h4><a class="hover_link" href="#">SEDONA</a></h4>
                   <p>Информационный сайт для туристов</p>
                   <a class="btn templates-items_btn" href="#">9900 руб.</a>
                 </div>
